fix navbar overflow

--- a/dashboard/dashboard.less
+++ b/dashboard/dashboard.less
@@ -94,7 +94,6 @@ body {
   border-left: 1px solid #229955;
   border-right: 1px solid #229955;
   border-bottom: 1px solid #229955;
-  overflow: hidden;
   .dash-left {
     float: left;
     display: inline-block;
